--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "nodemon": "^1.19.1",
     "purgecss-webpack-plugin": "^1.2.0",
     "tailwindcss": "^1.0",
+    "tailwindcss-list-reset": "^1.0.0",
     "tailwindcss-transition": "^1.0.5"
   }
 }
